test/tests/stages/8_loops/valid/extra_credit/goto_bypass_condition.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: i
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CDoWhile: 
                TIdentifier: (null)
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
                CCompound: 
                  CB: 
                    List[2]: 
                      CS: 
                        CLabel: 
                          TIdentifier: while_start
                          CExpression: 
                            CAssignment: 
                              None: 
                              CVar: 
                                TIdentifier: i
                                None: 
                              CBinary: 
                                CAdd: 
                                CVar: 
                                  TIdentifier: i
                                  None: 
                                CConstant: 
                                  CConstInt: 
                                    TInt: 1
                                  None: 
                                None: 
                              None: 
                      CS: 
                        CIf: 
                          CBinary: 
                            CLessThan: 
                            CVar: 
                              TIdentifier: i
                              None: 
                            CConstant: 
                              CConstInt: 
                                TInt: 10
                              None: 
                            None: 
                          CGoto: 
                            TIdentifier: while_start
                          None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: i
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
