test/tests/stages/8_loops/invalid_semantics/extra_credit/duplicate_label_in_loop.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CS: 
              CDoWhile: 
                TIdentifier: (null)
                CConstant: 
                  CConstInt: 
                    TInt: 1
                  None: 
                CCompound: 
                  CB: 
                    List[2]: 
                      CS: 
                        CLabel: 
                          TIdentifier: lbl
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 1
                              None: 
                      CS: 
                        CLabel: 
                          TIdentifier: lbl
                          CReturn: 
                            CConstant: 
                              CConstInt: 
                                TInt: 2
                              None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
